--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A Complete node js frontend and backend project",
   "main": "index.js",
   "scripts": {
-    "start" : "node backend/server.js",
-    "server" : "nodemon backend/server.js"
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js"
   },
   "author": "Anish Gowda",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "D": "^1.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.2.3",
     "nodemon": "^2.0.15"
   }
